kubernetes/apps/default/personal-site/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-site
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "www.ragas.sh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: personal-site
          port: 80
